<resources>
    <string name="app_name">TransLearn</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="random_button_text">Random</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Siemanko</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="toast_button_text">Toast</string>
    <string name="count_button_text">Count</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learn_fragment_label">Learn</string>
    <string name="translate_fragment_label">Translate Fragment</string>
    <string name="edit_text_to_translate_hint">Touch and start typing...</string>
    <string name="choice_quiz_fragment_label">Choice Quiz Fragment</string>
    <string name="end_quiz_fragment_label">End Quiz Fragment</string>
    <string name="notification_fragment_label">Notification Fragment</string>
    <string name="channel_name">notify_channel</string>
    <string name="statistics_label">Statistics Fragment</string>
</resources>
