<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.translearn.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/menu_fragment">

        <action
            android:id="@+id/action_FirstFragment_to_LearnFragment"
            app:destination="@id/LearnFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_TranslateFragment"
            app:destination="@id/TranslateFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_NotificationFragment"
            app:destination="@id/NotificationFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_StatisticsFragment"
            app:destination="@id/StatisticsFragment" />
    </fragment>
    <fragment
        android:id="@+id/LearnFragment"
        android:name="com.example.translearn.LearnFragment"
        android:label="@string/learn_fragment_label"
        tools:layout="@layout/learn_fragment">
        <action
            android:id="@+id/action_LearnFragment_to_ChoiceQuizFragment"
            app:destination="@id/ChoiceQuizFragment" />
    </fragment>
    <fragment
    android:id="@+id/TranslateFragment"
    android:name="com.example.translearn.TranslateFragment"
    android:label="@string/translate_fragment_label"
    tools:layout="@layout/translate_fragment">
</fragment>

    <fragment
        android:id="@+id/ChoiceQuizFragment"
        android:name="com.example.translearn.ChoiceQuizFragment"
        android:label="@string/choice_quiz_fragment_label"
        tools:layout="@layout/choice_quiz_fragment">

        <argument
            android:name="learn_lang_code"
            app:argType="string"
            android:defaultValue="en" />
        <argument
            android:name="learn_lang_name"
            app:argType="string"
            android:defaultValue="English" />
        <action
            android:id="@+id/action_ChoiceQuizFragment_to_EndQuizFragment"
            app:destination="@id/EndQuizFragment" />
        <action
            android:id="@+id/action_ChoiceQuizFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/EndQuizFragment"
        android:name="com.example.translearn.EndQuizFragment"
        android:label="@string/end_quiz_fragment_label"
        tools:layout="@layout/end_quiz_fragment">

        <argument
            android:name="score"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_EndQuizFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
    android:id="@+id/NotificationFragment"
    android:name="com.example.translearn.NotificationFragment"
    android:label="@string/notification_fragment_label"
    tools:layout="@layout/notification_fragment">
</fragment>

    <fragment
        android:id="@+id/StatisticsFragment"
        android:name="com.example.translearn.StatisticsFragment"
        android:label="@string/statistics_label"
        tools:layout="@layout/statistics_fragment">
    </fragment>

</navigation>
